RPC: added temp font directory shutdown hook; moved config to fopConfigTemplate